@@ -1,0 +1,16 @@
+Vagrant.configure('2') do |config|
+  config.vm.define 'fhirbase' do |m|
+    m.vm.box = 'Ubuntu Wily 15.10'
+    m.vm.box_url = 'https://cloud-images.ubuntu.com/vagrant/wily/current/wily-server-cloudimg-amd64-vagrant-disk1.box'
+
+    m.vm.network 'forwarded_port', guest: 5432, host: 2345
+    m.vm.synced_folder '../', '/vagrant'
+
+    ['provision/provision-dependencies.sh',
+     'provision/provision-environment.sh'].each do |path|
+      m.vm.provision 'shell' do |s|
+        s.path = path
+      end
+    end
+  end
+end
