@@ -1,3 +1,7 @@
+2016-01-28  Danil Kutkevich  <danil@kutkevich.org>
+
+        * vagrant: backport Vagrant configuration from Fhirbase 1.
+
 2016-01-26  Danil Kutkevich  <danil@kutkevich.org>
 
         * src/core/version.coffee (fhirbase_version): fhirbase version (#83).
